# Historical-RAG-QA-Assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
app/api/: dependencies.py  main.py  middleware.py  schemas.py
app/api/routes/: chat.py
app/core/: config.py  graph.py  models.py  pipeline.py  prompts.py  schemas.py  state.py
app/ingestion/: chunker.py  parser.py
app/nodes/: __init__.py  decompose.py  generate.py  grade_documents.py  grade_generation.py  guardrail.py  out_of_scope.py  process_retrieval.py  retrieve.py  rewrite_query.py  utils.py
app/retrieval/: hybrid.py  reranker.py  tools.py
data/: ancient_egypt.md  eval_dataset.json
data/vectorstore/3108f46b-c2cc-4306-86ae-f16f6b20b9e3/: index_metadata.pickle
evaluation/: create_dataset.py  run_experiment.py
frontend/: app.py
frontend/static/css/: style.css
frontend/static/js/: chat.js
frontend/templates/: index.html
scripts/: build_index.py  create_vectordb.py
tests/: conftest.py  test_api.py  test_ingestion.py  test_models.py  test_nodes.py  test_retrieval.py
